--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -1,1 +1,17 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href = "style.css" rel = "stylesheet">
+</head>
+<body>
+    <div id = "div1">
+        <div id = "equation_screen">
+            <label id = "equation_frame"></label>
+        </div>
+    </div>
+    <script src = "script.js"></script>
+</body>
+</html>
